fix(contacts): contacts list fits on mobile

--- a/style.css
+++ b/style.css
@@ -1043,7 +1043,7 @@ input {
   visibility: hidden;
   right: -100%;
   z-index: 2000;
-  position: absolute;
+  position: fixed;
   top: 0;
   height: 100vh;
   flex-direction: column-reverse;
@@ -1263,6 +1263,7 @@ input {
   }
   .intro-content {
     padding: 0 3vw;
+    margin-bottom: 2vh;
   }
   .intro {
     background-position: -500px;
@@ -1477,6 +1478,9 @@ input {
     height: 90vh;
     /* filter: grayscale(70%); */
   }
+  .price-no-click {
+    display: none;
+  }
   .examples-wrapper {
     height: fit-content;
   }
@@ -1545,7 +1549,7 @@ input {
     height: fit-content;
   }
   .contacts-headline {
-    margin-top: 7vh;
+    margin-top: 2vh;
   }
   .pre-items {
     opacity: 0;
@@ -1553,7 +1557,7 @@ input {
 
   .map {
     width: 92vw;
-    height: 21vh;
+    height: 20vh;
   }
   input {
     width: 100%;
@@ -1581,7 +1585,6 @@ input {
   }
   .contacts-list {
     padding: 0;
-    height: 25vh;
     width: 100%;
     text-transform: uppercase;
     padding: 0 4vw;
@@ -1603,7 +1606,6 @@ input {
 
   .contacts-form {
     width: 92vw;
-    margin-top: 3vh;
   }
   .equip-headline {
     font-size: 40px;
